--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,93 +1,186 @@
 {% extends 'base/base.html' %} {% load humanize %}{% block content %}
 <div class="mt-3 mb-4">
   {% if listing %}
-  <div class="col-md-10 mx-auto">
-    <div class="card">
-      <img
-        class="card-img-top"
-        src="{{listing.photo_main.url}}"
-        alt="{{listing.title}}"
-      />
-      <div class="card-body">
-        <p class="text-muted">{{listing.title}}</p>
-        <p class="badge bg-success">$ {{listing.price | intcomma}}</p>
-        <p class="text-muted">
-          {{listing.city}} {{listing.state}} {{listing.zipcode}}
-        </p>
-        <p class="text-muted">{{listing.sqft}}</p>
-        <p class="text-muted">{{listing.garage}}</p>
-        <p class="text-muted">{{listing.bedrooms}}</p>
-        <p class="text-muted">{{listing.realtour}}</p>
-        <p class="card-text">{{listing.list_date | timesince}}</p>
-        <div class="row">
-          {% if listing.photo_1 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_1.url}}"
-                alt="photo_1"
-                class="card-img-top"
-              />
+  <div class="row">
+    <div class="col-md-9 mx-auto">
+      <div class="card">
+        <img
+          class="card-img-top"
+          src="{{listing.photo_main.url}}"
+          alt="{{listing.title}}"
+        />
+        <div class="card-body">
+          <p class="text-muted">{{listing.title}}</p>
+          <p class="badge bg-success">$ {{listing.price | intcomma}}</p>
+          <p class="text-muted">
+            {{listing.city}} {{listing.state}} {{listing.zipcode}}
+          </p>
+          <p class="text-muted">{{listing.sqft}}</p>
+          <p class="text-muted">{{listing.garage}}</p>
+          <p class="text-muted">{{listing.bedrooms}}</p>
+          <p class="text-muted">{{listing.realtour}}</p>
+          <p class="card-text">{{listing.list_date | timesince}}</p>
+          <div class="row">
+            {% if listing.photo_1 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_1.url}}"
+                  alt="photo_1"
+                  class="card-img-top"
+                />
+              </div>
             </div>
-          </div>
-          {% endif %} {% if listing.photo_2 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_2.url}}"
-                alt="photo_2"
-                class="card-img-top"
-              />
+            {% endif %} {% if listing.photo_2 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_2.url}}"
+                  alt="photo_2"
+                  class="card-img-top"
+                />
+              </div>
             </div>
-          </div>
-          {% endif %} {% if listing.photo_3 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_3.url}}"
-                alt="photo_3"
-                class="card-img-top"
-              />
+            {% endif %} {% if listing.photo_3 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_3.url}}"
+                  alt="photo_3"
+                  class="card-img-top"
+                />
+              </div>
             </div>
-          </div>
-          {% endif %} {% if listing.photo_4 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_4.url}}"
-                alt="photo_4"
-                class="card-img-top"
-              />
+            {% endif %} {% if listing.photo_4 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_4.url}}"
+                  alt="photo_4"
+                  class="card-img-top"
+                />
+              </div>
             </div>
-          </div>
-          {% endif %} {% if listing.photo_5 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_5.url}}"
-                alt="photo_5"
-                class="card-img-top"
-              />
+            {% endif %} {% if listing.photo_5 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_5.url}}"
+                  alt="photo_5"
+                  class="card-img-top"
+                />
+              </div>
             </div>
-          </div>
-          {% endif %} {% if listing.photo_6 %}
-          <div class="col-md-4">
-            <div class="card mb-4">
-              <img
-                src="{{listing.photo_6.url}}"
-                alt="photo_6"
-                class="card-img-top"
-              />
+            {% endif %} {% if listing.photo_6 %}
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <img
+                  src="{{listing.photo_6.url}}"
+                  alt="photo_6"
+                  class="card-img-top"
+                />
+              </div>
             </div>
+            {% endif %}
           </div>
-          {% endif %}
+        </div>
+        <div class="card-footer">
+          <a
+            href="{% url 'listing' listing.id %}"
+            class="btn btn-sm btn-success"
+            >Show More</a
+          >
         </div>
       </div>
-      <div class="card-footer">
-        <a href="{% url 'listing' listing.id %}" class="btn btn-sm btn-success"
-          >Show More</a
-        >
-      </div>
+    </div>
+    <div class="col-md-3">
+      <form action="{% url 'contact' %}" method="POST">
+        <div class="card">
+          <div class="card-body">
+            {% csrf_token %} {% if user.is_authenticated %}
+            <input type="hidden" name="user_id" value="{{user.id}}" />
+            {% else %}
+            <input type="hidden" name="user_id" value="0" />
+            {% endif %}
+            <input
+              type="hidden"
+              name="realtor_email"
+              value="{{listing.realtour.email}}"
+            />
+            <input type="hidden" name="realtor_id" value="{{listing.id}}" />
+            <div class="form-group mb-3">
+              <label for="listing" class="form-label">Property</label>
+              <input
+                type="text"
+                name="listing"
+                id="listing"
+                value="{{listing.title}}"
+                class="form-control"
+                placeholder="Property"
+              />
+            </div>
+            <div class="form-group mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="form-control"
+                placeholder="Name"
+                {%
+                if
+                user.is_authenticated
+                %}
+                value="{{user.first_name}} {{user.last_name}}"
+                {%
+                endif
+                %}
+              />
+            </div>
+            <div class="form-group mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="form-control"
+                placeholder="Email"
+                {%
+                if
+                user.is_authenticated
+                %}
+                value="{{user.email}}"
+                {%
+                endif
+                %}
+              />
+            </div>
+            <div class="form-group mb-3">
+              <label for="phone" class="form-label">Phone</label>
+              <input
+                type="text"
+                name="phone"
+                id="phone"
+                class="form-control"
+                placeholder="Phone"
+              />
+            </div>
+            <div class="form-group mb-3">
+              <label for="message" class="form-label">Message</label>
+              <input
+                type="text"
+                name="message"
+                placeholder="Message"
+                id="message"
+                class="form-control"
+              />
+            </div>
+          </div>
+          <div class="card-footer">
+            <button type="submit" class="btn btn-sm btn-success">Submit</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
   {% endif %}
